# backend/routes/index.js
@@ -3,11 +3,7 @@ const express = require('express')
 const router = express.Router()
 const contactsRouter = require('./contacts')
 
-router.get('/', (req, res) => {
-    // #swagger.tags = ['Homepage']
-    // #swagger.description = 'Home endpoint.'
-    res.send('Week 3 Personal Assignment')
-})
+router.use('/', require('./swagger'));
 
 router.use('/contacts', contactsRouter)
 
